fix button style on mobile

--- a/css/app.scss
+++ b/css/app.scss
@@ -379,6 +379,8 @@ label {
   justify-content: center;
   outline: none;
   border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 
   &:hover, &:focus {
     background: var(--flamePea);
